--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@ Hello there, awesome person!
   Hello there, awesome person!
  <h1> You are beautiful </h1>
 </body>
+  <img src="https://avatars.githubusercontent.com/u/96068508?v=4"> 
 </head>
 </html>
