--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@ Hello there, awesome person!
 <body>
   Hello there, awesome person!
  <h1> You are beautiful </h1>
+ <ol>
+   <li>This</li>
+   <li>Is an</li>
+   <li>Ordered list</li>
+  </ol>
 </body>
   <img src="https://avatars.githubusercontent.com/u/96068508?v=4"> 
 </head>
