--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Hello there, awesome person!
    <li>Is an</li>
    <li>Ordered list</li>
   </ol>
+  <li><a href="https://github.com">This is a link to GitHub!</a></li> 
 </body>
   <img src="https://avatars.githubusercontent.com/u/96068508?v=4"> 
 </head>
