--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 Hello there, awesome person!
 <html>
 <head>
-  <title> My awesome web page </title>
+  <title> My awesome web page </title> 
+  <link rel="stylesheet" href="style.css"> 
 <body>
   Hello there, awesome person!
  <h1> You are beautiful </h1>
